<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.pjackson.groceryapp.MainActivity">

    <TextView
        android:id="@+id/txtPage1Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_heading"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtPage1Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_page1_desc"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPage1Heading" />

    <TextView
        android:id="@+id/txtPage1Item1Title"
        android:layout_width="52dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/itemOne"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPage1Description" />

    <TextView
        android:id="@+id/txtPage1Item2Title"
        android:layout_width="52dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="21dp"
        android:text="@string/itemTwo"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPage1Item1Title" />

    <TextView
        android:id="@+id/txtPage1Item3Title"
        android:layout_width="52dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="21dp"
        android:text="@string/itemThree"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPage1Item2Title" />

    <TextView
        android:id="@+id/txtPage1Item4Title"
        android:layout_width="52dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="21dp"
        android:text="@string/itemFour"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPage1Item3Title" />

    <TextView
        android:id="@+id/txtPage1Item5Title"
        android:layout_width="52dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="21dp"
        android:text="@string/itemFive"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPage1Item4Title" />

    <TextView
        android:id="@+id/txtPage1Item6Title"
        android:layout_width="52dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="21dp"
        android:text="@string/itemSix"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPage1Item5Title" />

    <TextView
        android:id="@+id/txtPage1Item7Title"
        android:layout_width="52dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="21dp"
        android:text="@string/itemSeven"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPage1Item6Title" />

    <TextView
        android:id="@+id/txtPage1Item8Title"
        android:layout_width="52dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="21dp"
        android:text="@string/itemEight"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPage1Item7Title" />

    <TextView
        android:id="@+id/txtPage1Item9Title"
        android:layout_width="52dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="21dp"
        android:text="@string/itemNine"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPage1Item8Title" />

    <TextView
        android:id="@+id/txtPage1Item10Title"
        android:layout_width="52dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="21dp"
        android:text="@string/itemTen"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPage1Item9Title" />

    <Spinner
        android:id="@+id/spnPage1Item1Qty"
        android:layout_width="82dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/itemQty"
        app:layout_constraintStart_toEndOf="@+id/txtPage1Item1Title"
        app:layout_constraintTop_toBottomOf="@+id/txtPage1Description" />

    <Spinner
        android:id="@+id/spnPage1Item2Qty"
        android:layout_width="82dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:entries="@array/itemQty"
        app:layout_constraintStart_toEndOf="@+id/txtPage1Item2Title"
        app:layout_constraintTop_toBottomOf="@+id/spnPage1Item1Qty" />

    <Spinner
        android:id="@+id/spnPage1Item3Qty"
        android:layout_width="82dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:entries="@array/itemQty"
        app:layout_constraintStart_toEndOf="@+id/txtPage1Item3Title"
        app:layout_constraintTop_toBottomOf="@+id/spnPage1Item2Qty" />

    <Spinner
        android:id="@+id/spnPage1Item4Qty"
        android:layout_width="82dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:entries="@array/itemQty"
        app:layout_constraintStart_toEndOf="@+id/txtPage1Item4Title"
        app:layout_constraintTop_toBottomOf="@+id/spnPage1Item3Qty" />

    <Spinner
        android:id="@+id/spnPage1Item5Qty"
        android:layout_width="82dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:entries="@array/itemQty"
        app:layout_constraintStart_toEndOf="@+id/txtPage1Item5Title"
        app:layout_constraintTop_toBottomOf="@+id/spnPage1Item4Qty" />

    <Spinner
        android:id="@+id/spnPage1Item6Qty"
        android:layout_width="82dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:entries="@array/itemQty"
        app:layout_constraintStart_toEndOf="@+id/txtPage1Item6Title"
        app:layout_constraintTop_toBottomOf="@+id/spnPage1Item5Qty" />

    <Spinner
        android:id="@+id/spnPage1Item7Qty"
        android:layout_width="82dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:entries="@array/itemQty"
        app:layout_constraintStart_toEndOf="@+id/txtPage1Item7Title"
        app:layout_constraintTop_toBottomOf="@+id/spnPage1Item6Qty" />

    <Spinner
        android:id="@+id/spnPage1Item8Qty"
        android:layout_width="82dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:entries="@array/itemQty"
        app:layout_constraintStart_toEndOf="@+id/txtPage1Item8Title"
        app:layout_constraintTop_toBottomOf="@+id/spnPage1Item7Qty" />

    <Spinner
        android:id="@+id/spnPage1Item9Qty"
        android:layout_width="82dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:entries="@array/itemQty"
        app:layout_constraintStart_toEndOf="@+id/txtPage1Item9Title"
        app:layout_constraintTop_toBottomOf="@+id/spnPage1Item8Qty" />

    <Spinner
        android:id="@+id/spnPage1Item10Qty"
        android:layout_width="82dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:entries="@array/itemQty"
        app:layout_constraintStart_toEndOf="@+id/txtPage1Item10Title"
        app:layout_constraintTop_toBottomOf="@+id/spnPage1Item9Qty" />

    <EditText
        android:id="@+id/txtPage1Item1Type"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/hint1_page1"
        android:inputType="textPersonName"
        android:labelFor="@id/txtPage1Item1Type"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/spnPage1Item1Qty"
        app:layout_constraintTop_toBottomOf="@+id/txtPage1Description" />

    <EditText
        android:id="@+id/txtPage1Item2Type"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/hint2_page1"
        android:inputType="textPersonName"
        android:labelFor="@id/txtPage1Item2Type"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/spnPage1Item2Qty"
        app:layout_constraintTop_toBottomOf="@+id/txtPage1Item1Type" />

    <EditText
        android:id="@+id/txtPage1Item3Type"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/hint3_page1"
        android:inputType="textPersonName"
        android:labelFor="@id/txtPage1Item3Type"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/spnPage1Item3Qty"
        app:layout_constraintTop_toBottomOf="@+id/txtPage1Item2Type" />

    <EditText
        android:id="@+id/txtPage1Item4Type"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/txtPage1Item4Type"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/spnPage1Item4Qty"
        app:layout_constraintTop_toBottomOf="@+id/txtPage1Item3Type" />

    <EditText
        android:id="@+id/txtPage1Item5Type"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/txtPage1Item5Type"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/spnPage1Item5Qty"
        app:layout_constraintTop_toBottomOf="@+id/txtPage1Item4Type" />

    <EditText
        android:id="@+id/txtPage1Item6Type"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/txtPage1Item6Type"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/spnPage1Item6Qty"
        app:layout_constraintTop_toBottomOf="@+id/txtPage1Item5Type" />

    <EditText
        android:id="@+id/txtPage1Item7Type"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/txtPage1Item7Type"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/spnPage1Item7Qty"
        app:layout_constraintTop_toBottomOf="@+id/txtPage1Item6Type" />

    <EditText
        android:id="@+id/txtPage1Item8Type"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/txtPage1Item8Type"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/spnPage1Item8Qty"
        app:layout_constraintTop_toBottomOf="@+id/txtPage1Item7Type" />

    <EditText
        android:id="@+id/txtPage1Item9Type"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/txtPage1Item9Type"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/spnPage1Item9Qty"
        app:layout_constraintTop_toBottomOf="@+id/txtPage1Item8Type" />

    <EditText
        android:id="@+id/txtPage1Item10Type"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@id/txtPage1Item10Type"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/spnPage1Item10Qty"
        app:layout_constraintTop_toBottomOf="@+id/txtPage1Item9Type" />

    <Switch
        android:id="@+id/swtPage1Item1Send"
        android:layout_width="44dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPage1Description" />

    <Switch
        android:id="@+id/swtPage1Item2Send"
        android:layout_width="44dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swtPage1Item1Send" />

    <Switch
        android:id="@+id/swtPage1Item3Send"
        android:layout_width="44dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swtPage1Item2Send" />

    <Switch
        android:id="@+id/swtPage1Item4Send"
        android:layout_width="44dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swtPage1Item3Send" />

    <Switch
        android:id="@+id/swtPage1Item5Send"
        android:layout_width="44dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swtPage1Item4Send" />

    <Switch
        android:id="@+id/swtPage1Item6Send"
        android:layout_width="44dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swtPage1Item5Send" />

    <Switch
        android:id="@+id/swtPage1Item7Send"
        android:layout_width="44dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swtPage1Item6Send" />

    <Switch
        android:id="@+id/swtPage1Item8Send"
        android:layout_width="44dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swtPage1Item7Send" />

    <Switch
        android:id="@+id/swtPage1Item9Send"
        android:layout_width="44dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swtPage1Item8Send" />

    <Switch
        android:id="@+id/swtPage1Item10Send"
        android:layout_width="44dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swtPage1Item9Send" />

    <Button
        android:id="@+id/btnPage1Clear"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="52dp"
        android:text="@string/btnPage1Clear"
        android:textColor="@android:color/holo_purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnPage1Done"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="52dp"
        android:text="@string/btnPageDone"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
